Fix alignment of "of year" and fix a couple minor html things

--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ a:visited {
   color: #bbbbbb;
 }
 
+#main-wrapper {
+    text-align: center;
+}
+
 body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 12px;
